# Cold-Mail-Generator

./: .env  README.md  new_project_groq.ipynb  pyproject.toml
.ipynb_checkpoints/: new_project_groq-checkpoint.ipynb
app/: chains.py  main.py  portfolio.py
app/vectorstore/: chroma.sqlite3
vectorstore/: chroma.sqlite3
